Added ability to enable link previews in OCR and QRCode Scanner

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1344,4 +1344,6 @@
     <string name="golden_forest">Golden Forest</string>
     <string name="greenish">Greenish</string>
     <string name="retro_yellow">Retro Yellow</string>
+    <string name="links_preview">Links Preview</string>
+    <string name="links_preview_sub">Enables link preview retrieveing in places where you can obtain text (QRCode, OCR etc)</string>
 </resources>
