--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1357,4 +1357,6 @@
     <string name="webp_type_to_webp_sub">Convert batch of images to WEBP file</string>
     <string name="webp_type_to_webp">Images to WEBP</string>
     <string name="select_webp_image_to_start">Pick WEBP image to start</string>
+    <string name="manage_storage_extra_types">No full access to files</string>
+    <string name="manage_storage_extra_types_sub">Allow all files access to see JXL, QOI and other images that not recognized on android as Image files, without giving permission you will be unable to see this images here</string>
 </resources>
