--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1361,4 +1361,6 @@
     <string name="manage_storage_extra_types_sub">Allow all files access to see JXL, QOI and other images that not recognized on android as Image files, without giving permission you will be unable to see this images here</string>
     <string name="default_draw_color">Default Draw Color</string>
     <string name="default_draw_path_mode">Default Draw Path Mode</string>
+    <string name="add_timestamp">Add Timestamp</string>
+    <string name="add_timestamp_sub">Enable Timestamp adding to the output filename</string>
 </resources>
