--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1366,4 +1366,6 @@
     <string name="formatted_timestamp">Formatted Timestamp</string>
     <string name="formatted_timestamp_sub">Enable Timestamp formatting in output filename instead of basic millis</string>
     <string name="enable_timestamps_to_format_them">Enable Timestamps to select their format</string>
+    <string name="one_time_save_location">One Time Save Location</string>
+    <string name="one_time_save_location_sub">View and Edit one time save locations which you can use by long pressing the save button in mostly all options</string>
 </resources>
