--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1368,4 +1368,5 @@
     <string name="enable_timestamps_to_format_them">Enable Timestamps to select their format</string>
     <string name="one_time_save_location">One Time Save Location</string>
     <string name="one_time_save_location_sub">View and Edit one time save locations which you can use by long pressing the save button in mostly all options</string>
+    <string name="recently_used">Recently Used</string>
 </resources>
