--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1402,4 +1402,5 @@
     <string name="return_type">Return Type</string>
     <string name="jitter">Jitter</string>
     <string name="domain_warp">Domain Warp</string>
+    <string name="alignment">Alignment</string>
 </resources>
