Added RGB and Brightness Large histograms generation for Color Tools

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1413,4 +1413,5 @@
     <string name="collages_info">Hold image to swap, move and zoom to adjust position</string>
     <string name="histogram">Histogram</string>
     <string name="histogram_sub">RGB or Brightness image histogram to help you make adjustments</string>
+    <string name="image_for_histogram">This image will be used to generate RGB and Brightness histograms</string>
 </resources>
