Added Custom options entering for tesseract

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1416,4 +1416,5 @@
     <string name="image_for_histogram">This image will be used to generate RGB and Brightness histograms</string>
     <string name="tesseract_options">Tesseract Options</string>
     <string name="tesseract_options_sub">Appy some input variables for tesseract engine</string>
+    <string name="custom_options">Custom Options</string>
 </resources>
