--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1417,4 +1417,5 @@
     <string name="tesseract_options">Tesseract Options</string>
     <string name="tesseract_options_sub">Appy some input variables for tesseract engine</string>
     <string name="custom_options">Custom Options</string>
+    <string name="custom_params_info">Options should be entered following this pattern: \"--{option_name} {value}\"</string>
 </resources>
