--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1419,4 +1419,6 @@
     <string name="custom_options">Custom Options</string>
     <string name="custom_params_info">Options should be entered following this pattern: \"--{option_name} {value}\"</string>
     <string name="auto_crop">Auto Crop</string>
+    <string name="free_corners">Free Corners</string>
+    <string name="free_corners_sub">Crop image by polygon, this also corrects perspective</string>
 </resources>
