--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -254,7 +254,7 @@
     <string name="draw_on_background_sub">اختر لون الخلفية وارسم فوقه</string>
     <string name="background_color">لون الخلفية</string>
     <string name="cipher">الشفرة</string>
-    <string name="cipher_sub">تشفير وفك تشفير أي ملف (ليس فقط الصورة) بناءً على تشفير AES algorythm</string>
+    <string name="cipher_sub">تشفير وفك تشفير أي ملف (ليس فقط الصورة) بناءً على تشفير AES algorithm</string>
     <string name="pick_file">اختر الملف</string>
     <string name="encrypt">تشفير</string>
     <string name="decrypt">فك تشفير</string>
@@ -725,7 +725,7 @@
     <string name="erase_background">محو الخلفية</string>
     <string name="blur_radius">طمس نصف قطرها</string>
     <string name="create_issue">إنشاء مشكلة</string>
-    <string name="something_went_wrong_emphasis">عفوًا... حدث خطأ ما. يمكنك الكتابة لي باستخدام الخيارات أدناه وسأحاول إيجاد الحل</string>
+    <string name="something_went_wrong_emphasis">عفوًا… حدث خطأ ما. يمكنك الكتابة لي باستخدام الخيارات أدناه وسأحاول إيجاد الحل</string>
     <string name="resize_and_convert">تغيير الحجم والتحويل</string>
     <string name="resize_and_convert_sub">تغيير حجم الصور المعينة أو تحويلها إلى تنسيقات أخرى. يمكن أيضًا تحرير بيانات EXIF التعريفية هنا في حالة اختيار صورة واحدة.</string>
     <string name="max_colors_count">الحد الأقصى لعدد الألوان</string>
