Added ability to Pin tools to home screen as shortcuts by #1375

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1447,4 +1447,5 @@
     <string name="stamped_sub">Draws selected shapes along the path with specified spacing</string>
     <string name="zigzag_sub">Draws wavy zigzag along the path</string>
     <string name="zigzag_ratio">Zigzag ratio</string>
+    <string name="create_shortcut">Create Shortcut</string>
 </resources>
