Added ability to crossfade frames in GIF by #1265

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1452,4 +1452,7 @@
     <string name="create_shortcut_subtitle">Tool will be added to home screen of your launcher as shortcut, use it combining with \"Skip file picking\" setting to achieve needed behavior</string>
     <string name="dont_stack_frames">Don\'t stack frames</string>
     <string name="dont_stack_frames_sub">Enables disposing of prevoius frames, so they will not stack on each other</string>
+    <string name="crossfade">Crossfade</string>
+    <string name="crossfade_sub">Frames will be crossfaded into each other</string>
+    <string name="crossfade_count">Crossfade frames count</string>
 </resources>
