Added Setting to use compact selectors layout by #1395

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1467,4 +1467,6 @@
     <string name="grid_color">Grid Color</string>
     <string name="cell_width">Cell Width</string>
     <string name="cell_height">Cell Height</string>
+    <string name="compact_selectors">Compact Selectors</string>
+    <string name="compact_selectors_sub">Some selection controls will use compact layout to take less space</string>
 </resources>
