--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1472,4 +1472,6 @@
     <string name="grant_camera_permission_to_capture_image">Grant camera permission in settings to capture image</string>
     <string name="layout">Layout</string>
     <string name="main_screen_title">Main Screen Title</string>
+    <string name="constant_rate_factor">Constant Rate Factor (CRF)</string>
+    <string name="crf_sub">A value of %1$d means a slow compression, resulting in a relatively small file size. %2$d means a faster compression, resulting in a large file.</string>
 </resources>
