--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1476,5 +1476,5 @@
     <string name="crf_sub">A value of %1$d means a slow compression, resulting in a relatively small file size. %2$d means a faster compression, resulting in a large file.</string>
     <string name="lut_library">Lut Library</string>
     <string name="lut_library_sub">Download collection of LUTs, which you can apply after downloading</string>
-    <string name="lut_library_update_sub">Update collection of LUTs, which you can apply after downloading</string>
+    <string name="lut_library_update_sub">Update collection of LUTs (only new ones will be queued), which you can apply after downloading</string>
 </resources>
